<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="390dp"
    android:layout_height="500dp"
    android:background="@drawable/bg_dialogtask">


    <TextView
        android:id="@+id/infotxt1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/info1"
        android:textAlignment="center"
        android:textColor="@color/letter_mid"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infotxt2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/info2"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infotxt1" />

    <ImageView
        android:id="@+id/pin1img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin2img"
        app:srcCompat="@drawable/baseline_location_on_24" />

    <ImageView
        android:id="@+id/pin2img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infotxt2"
        app:srcCompat="@drawable/baseline_location_on" />

    <ImageView
        android:id="@+id/embleimg3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin1img"
        app:srcCompat="@drawable/ic_bee" />

    <TextView
        android:id="@+id/txtpin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/info3"
        android:textColor="@color/letter_mid"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toEndOf="@+id/pin2img"
        app:layout_constraintTop_toBottomOf="@+id/infotxt2" />

    <TextView
        android:id="@+id/txtpin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/info4"
        android:textColor="@color/letter_mid"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toEndOf="@+id/pin1img"
        app:layout_constraintTop_toBottomOf="@+id/txtpin1" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="220dp"
        android:layout_height="110dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="40dp"
        android:text="@string/info5"
        android:textAlignment="center"
        android:textColor="@color/letter_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toEndOf="@+id/embleimg3"
        app:layout_constraintTop_toBottomOf="@+id/txtpin2" />

</androidx.constraintlayout.widget.ConstraintLayout>