<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboardingbg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="170dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent">

            <ImageView
                android:id="@+id/visitorImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/visitoricon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtvisitortile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="122dp"
                android:text="@string/visitortitle"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/visitorImage"
                app:layout_constraintStart_toStartOf="@+id/visitorImage"
                app:layout_constraintTop_toTopOf="@+id/visitorImage" />

            <TextView
                android:id="@+id/txtvisitortitle"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="28dp"
                android:text="@string/visitordesc"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/visitorImage"
                app:layout_constraintEnd_toEndOf="@+id/visitorImage"
                app:layout_constraintStart_toStartOf="@+id/visitorImage" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/localImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/localicon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtlocaltile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="124dp"
                android:text="@string/localtitle"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/localImage"
                app:layout_constraintStart_toStartOf="@+id/localImage"
                app:layout_constraintTop_toTopOf="@+id/localImage" />

            <TextView
                android:id="@+id/txtlocaltitle"
                android:layout_width="260dp"
                android:layout_height="33dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="36dp"
                android:text="@string/localdesc"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/localImage"
                app:layout_constraintEnd_toEndOf="@+id/localImage"
                app:layout_constraintStart_toStartOf="@+id/localImage" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="Είμαι:"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
